# efg.sh

./: .dockerignore  .env.dev  CNAME  Dockerfile  README.md  application.py  application.toml  boot.py  docker-compose.yaml  index.html  pyproject.toml
app/: environment.py  responses.py
app/controllers/: __init__.py  metrics.py
app/database/: __init__.py
app/templates/metrics/: _update.html  create.html
